<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlatSeeker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="room_number">Number of rooms</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="end_range">End range</string>
    <string name="tick">-</string>
    <string name="start_range">Start</string>
    <string name="price_range">Price</string>
    <string name="range_km">Range(km)</string>
    <string name="city">City</string>
    <string name="choose_location">Choose a location</string>
    <string name="hyphen">-</string>
    <string name="room_range">Room</string>
    <string name="range">Range</string>

</resources>
